# irado-scrapy

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: container-image.yml
irado_scrapy/: hass_discovery_ext.py  mqtt_pipeline.py  settings.py  spider.py
k8s/: cronjob.yaml
