[tool.poetry]
name = "irado-scrapy"
version = "0.1.3"
description = "Scrapy spider for Irado collection dates, exporting to Home Assistant over MQTT"
authors = ["Maruno Ulfdrengr"]
license = "MPL-2.0"
packages = [
    {include = "irado_scrapy"}
]

[tool.poetry.dependencies]
python = "^3.12"
Scrapy = "^2.13.2"
aiomqtt = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
